--- a/src/app/modules/my-projects/my-projects.component.html
+++ b/src/app/modules/my-projects/my-projects.component.html
@@ -14,53 +14,34 @@
           Nam laoreet tellus vel accumsan mollis. Fusce vel mi a erat facilisis maximus.
         </p>
       </mat-card-content>
-      <mat-card-actions align="end">
-        <button mat-flat-button color="primary" routerLink="/my-projects">
+
+      <!-- <mat-card-actions align="end">
+        <button mat-flat-button color="primary">
           Create New Project
         </button>
-      </mat-card-actions>
+      </mat-card-actions> -->
+
     </mat-card>
     
     <div class="margin-top-l margin-left-m">
-      <div>
-        <div *ngIf="(loading$ | async)">
-          <mat-spinner></mat-spinner>
-        </div>
-        <div *ngIf="error">
-          Error: {{error.message}}
-        </div>
-        <div *ngIf="!(loading$ | async) && personProjects?.projects?.length > 0; else noProjects">
-          <!-- PersonInfo: {{personInfo | json }} -->
-          <div *ngFor="let personProject of personProjects.projects">
-
-            <mat-card class="person-projects-card">
-              <mat-card-header>
-                <mat-card-title>{{personProject.project.title}}</mat-card-title>
-                <mat-card-subtitle>{{personProject.project.start_date | date}} - {{personProject.project.end_date | date}}</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <div class="project-members">
-                  <mat-chip-list aria-label="Project Members">
-                    <mat-chip *ngFor="let member of personProject.project.members" matTooltip="{{member.role.name}}">{{member.person.full_name}}</mat-chip>
-                  </mat-chip-list>
-                </div>
-                <p class="project-description">
-                  {{personProject.project.description}}
-                </p>
-              </mat-card-content>
-              <mat-card-actions align="end">
-                <button mat-flat-button color="accent" (click)="openProject(personProject.project.id)">View</button>
-              </mat-card-actions>
-            </mat-card>
-            
-          </div>
-        </div>
-        <ng-template #noProjects>
-          <div *ngIf="!(loading$ | async) && !error">
-            No projects yet!
-          </div>
-        </ng-template>
+      
+      <div *ngIf="(loading$ | async)">
+        <mat-spinner></mat-spinner>
       </div>
+
+      <div *ngIf="error">
+        Error: {{error.message}}
+      </div>
+
+      <div *ngIf="!(loading$ | async) && personProjects?.projects?.length > 0; else noProjects">
+        <app-project-list [projects]="personProjects.projects"></app-project-list>
+      </div>
+      <ng-template #noProjects>
+        <div *ngIf="!(loading$ | async) && !error">
+          You don't have any projects yet!
+        </div>
+      </ng-template>
+
     </div>
   </div>
   
