updates services routes, minor updates

--- a/src/app/modules/cer-services/cer-services.component.html
+++ b/src/app/modules/cer-services/cer-services.component.html
@@ -1,2 +1,6 @@
-<h1>CeR Services Management</h1>
-<p>This page will be for CeR admin only. Admins will be able to view and manage all cer services.</p>
+<div>
+  <h1>CeR Services</h1>
+  <p>Services here</p>
+
+  <router-outlet></router-outlet>
+</div>
