add dropbox graphql query etc

--- a/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
+++ b/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
@@ -1,1 +1,4 @@
-<p>dropbox-details works!</p>
+<div class="dropbox-content">
+  <h1>Dropbox Details</h1>
+  <p>Dropbox: {{dropbox | json}}</p>
+</div>
