--- a/src/app/modules/my-services/services-list/services-list.component.html
+++ b/src/app/modules/my-services/services-list/services-list.component.html
@@ -37,7 +37,7 @@
         <mat-card-subtitle>{{research_drive.name}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions align="end">
-        <button mat-flat-button color="accent" (click)="openService('research_drive', research_drive.id)">View</button>
+        <button mat-flat-button color="accent" (click)="openService('research-drive', research_drive.id)">View</button>
       </mat-card-actions>
     </mat-card>
   </div>
@@ -67,7 +67,7 @@
         <mat-card-subtitle>{{vm.name}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions align="end">
-        <button mat-flat-button color="accent" (click)="openService('vm', vm.id)">View</button>
+        <button mat-flat-button color="accent" (click)="openService('research-vm', vm.id)">View</button>
       </mat-card-actions>
     </mat-card>
   </div>
