add new components and routes to cer-services, some minor changes

--- a/src/app/modules/my-services/services-list/services-list.component.html
+++ b/src/app/modules/my-services/services-list/services-list.component.html
@@ -37,7 +37,7 @@
         <mat-card-subtitle>{{research_drive.name}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions align="end">
-        <button mat-flat-button color="accent" (click)="openService('research-drive', research_drive.id)">View</button>
+        <button mat-flat-button color="accent" (click)="openService('research-storage', research_drive.id)">View</button>
       </mat-card-actions>
     </mat-card>
   </div>
@@ -52,7 +52,7 @@
         <mat-card-subtitle>{{vis.name}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions align="end">
-        <button mat-flat-button color="accent" (click)="openService('vis', vis.id)">View</button>
+        <button mat-flat-button color="accent" (click)="openService('visualisation', vis.id)">View</button>
       </mat-card-actions>
     </mat-card>
   </div>
