--- a/src/app/modules/my-projects/project/project.component.html
+++ b/src/app/modules/my-projects/project/project.component.html
@@ -93,7 +93,7 @@
                 <mat-list-item *ngFor="let research_drive of project.services.research_drive" role="listitem">
                   <img matListAvatar class="avatar-image" src="assets/imgs/research-storage.jpg" alt="avatar">
                   <h3 matLine>{{research_drive.name}}</h3>
-                  <button mat-flat-button color="accent" routerLink="/service/research-drive/{{research_drive.id}}">View</button>
+                  <button mat-flat-button color="accent" routerLink="/service/research-storage/{{research_drive.id}}">View</button>
                 </mat-list-item>
               </mat-list>
               <mat-divider></mat-divider>
@@ -103,7 +103,7 @@
                 <mat-list-item *ngFor="let vis of project.services.vis" role="listitem">
                   <img matListAvatar class="avatar-image" src="assets/imgs/vis.jpg" alt="avatar">
                   <h3 matLine>{{vis.name}}</h3>
-                  <button mat-flat-button color="accent" routerLink="/service/vis/{{vis.id}}">View</button>
+                  <button mat-flat-button color="accent" routerLink="/service/visualisation/{{vis.id}}">View</button>
                 </mat-list-item>
               </mat-list>
               <mat-divider></mat-divider>
