some refactoring and tidy up

--- a/src/app/modules/my-projects/my-projects.component.html
+++ b/src/app/modules/my-projects/my-projects.component.html
@@ -34,7 +34,7 @@
       </div>
 
       <div *ngIf="!(loading$ | async) && personProjects?.projects?.length > 0; else noProjects">
-        <app-project-list [projects]="personProjects.projects"></app-project-list>
+        <app-my-projects-list [projects]="personProjects.projects"></app-my-projects-list>
       </div>
       <ng-template #noProjects>
         <div *ngIf="!(loading$ | async) && !error">
