--- a/src/app/modules/cer-services/research-vm/research-vm-details/research-vm-details.component.html
+++ b/src/app/modules/cer-services/research-vm/research-vm-details/research-vm-details.component.html
@@ -1,4 +1,62 @@
-<div class="research-vm-content">
-  <h1>Research Virtual Machine Details</h1>
-  <p>Research Virtual Machine: {{researchVm | json}}</p>
+<div class="research-vm-container">
+  <div class="research-vm-content">
+    <div *ngIf="(loading$ | async)">
+      <mat-spinner></mat-spinner>
+    </div>
+
+    <mat-card *ngIf="researchVm && !(loading$ | async)">
+      <div fxLayout="row wrap">
+        <img mat-card-avatar class="avatar-img" src="assets/imgs/research-vm.jpg">
+        <mat-card-title>{{researchVm.name}}</mat-card-title>
+      </div>
+      <mat-card-subtitle>Research Virtual Machine | Manage</mat-card-subtitle>
+    </mat-card>
+
+    <mat-card *ngIf="researchVm && !(loading$ | async)">
+      <mat-card-content>
+        <h3>Name:</h3>
+        <h4>{{researchVm.name}}</h4>
+        <h3>Created Date:</h3>
+        <h4>{{researchVm.date | date}}</h4>
+        <h3>VM Specs:</h3>
+        <p>OS: <b>{{researchVm.os}}</b></p>
+        <p>CPUs: <b>{{researchVm.cpus}}</b></p>
+        <p>Memory (GB): <b>{{researchVm.memory_gb}}</b></p>
+        <p>Total Disk (GB): <b>{{researchVm.total_disk_gb}}</b></p>
+        <p>Host Name: <b>{{researchVm.host}}</b></p>
+        <p>Unique Id: <b>{{researchVm.uuid}}</b></p>
+      </mat-card-content>
+    </mat-card>
+
+    <div *ngIf="researchVm && !(loading$ | async)">
+      <div>
+        <mat-card>
+          <h3>Projects:</h3>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <mat-list role="list" *ngIf="researchVm.projects.length > 0; else noProjects">
+              <mat-list-item *ngFor="let project of researchVm.projects" role="listitem">
+                <h3 matLine class="project-title">{{project.project.title}}</h3>
+                <p matLine>Project Code: <strong>{{project.code}}</strong></p>
+                <h5 matLine>{{project.project.start_date | date}} - {{project.project.end_date | date}}</h5>
+                <button mat-flat-button color="accent" routerLink="/project/{{project.project.id}}">View</button>
+                <mat-divider></mat-divider>
+              </mat-list-item>
+              
+            </mat-list>
+
+            <ng-template #noProjects>
+              <div *ngIf="!(loading$ | async) && !error">
+                <p>There are no projects associated with this research virtual machine.</p>
+              </div>
+            </ng-template>
+
+          </mat-card-content>
+
+        </mat-card>
+      </div>
+    </div>
+    
+  </div>
 </div>
+
